<resources>
    <string name="app_name">دیده بان بازار</string>
    <string name="filter_by_last_transaction_percent">Filter by Last Transaction Percent:</string>
    <string name="from">از:</string>
    <string name="to">تا:</string>
    <string name="symbol">نماد</string>
    <string name="last_transaction_percent">درصد آخرین معامله</string>
    <string name="eps">EPS</string>
    <string name="last_price_value">آخرین قیمت</string>
    <string name="filter">فیلتر</string>
    <string name="sort">مرتب سازی</string>
    <string name="by_means_of">بر اساس</string>
    <string name="submit">اعمال</string>
    <string name="history">تاریخچه</string>
    <string name="refresh">تازه سازی</string>
    <string name="delete_data">حذف اطلاعات</string>
    <string name="lastPriceValue">آحرین قیمت مقدار</string>
    <string name="last_price_percent">آخرین قیمت درصد</string>
    <string name="p_e">P/E</string>
    <string name="buyVolume">خرید حجم</string>
    <string name="buy_price">خرید قیمت</string>
    <string name="buyNo">خرید تعداد</string>
    <string name="sell_price">فروش قیمت</string>
    <string name="sell_volume">فروش حجم</string>
    <string name="sell_no">فروش تعداد</string>
    <string name="about_us">درباره ما</string>
    <string name="project_manager">مدیر پروژه: علی عبدالهی</string>
    <string name="programmer_iahrari">برنامه نویس: ایمان احرای</string>
    <string name="github_repository">GitHub repository: https://github.com/iahrari/AndroidFilterForTsetmc</string>
    <string name="logo_resource">منبع لوگو: https://www.freepik.com/free-photos-vectors/business</string>
    <string name="ascending">صعودی</string>
    <string name="descending">نزولی</string>
</resources>
