<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_manager"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/programmer_iahrari"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/github_repository"
        android:autoLink="web"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo_resource"
        android:autoLink="web"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_margin="16dp"/>

</LinearLayout>