<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_peekHeight="0dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <data>
        <variable name="sortComponent" type="com.example.tsetmc.viewmodel.SortingComponent" />
        <import type="androidx.appcompat.widget.AppCompatRadioButton"/>
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sort_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/by_means_of"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_sort_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                setSpinnerAdapter="@{true}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sort_title"/>

            <RadioGroup
                android:layout_width="0dp"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_sort_dialog"
                android:id="@+id/sorting_radio_group"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="4dp"
                    android:onClick="@{(view) -> sortComponent.setSortingMethod(((AppCompatRadioButton)view).isChecked())}"
                    android:id="@+id/ascending"
                    android:layout_weight="1"
                    android:text="@string/ascending"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/descending"
                    android:padding="4dp"
                    android:onClick="@{(view) -> sortComponent.setSortingMethod(!((AppCompatRadioButton) view).isChecked())}"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/descending"/>
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/submit_sorting"
                android:layout_margin="16dp"
                android:text="@string/submit"
                app:layout_constraintTop_toBottomOf="@+id/sorting_radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>