<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.tsetmc.service.utils.StringUtil" />
        <variable name="market" type="com.example.tsetmc.service.model.Market" />
    </data>

    <HorizontalScrollView
        android:id="@+id/market_item_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:layout_margin="4dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/title_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@color/md_white_1000"
                    android:orientation="horizontal"
                    android:weightSum="12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/symbol"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/last_transaction_percent"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/last_price_value"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/last_price_percent"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/eps"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/p_e"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/buyNo"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/buyVolume"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/buy_price"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sell_price"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sell_volume"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sell_no"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal"
                    android:weightSum="12">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/symbol"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@{StringUtil.convertEnglishNumberToPersian(market.symbol)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        tools:text="ضماد" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/last_transaction_percent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layoutDirection="ltr"
                        android:text="@{StringUtil.convertEnglishNumberToPersian(market.lastTransactionPercent)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        tools:text="2.3%" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/last_price_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layoutDirection="ltr"
                        android:text="@{StringUtil.convertEnglishNumberToPersian(market.lastPriceValue)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        tools:text="426322" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/last_price_percent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layoutDirection="ltr"
                        android:text="@{StringUtil.convertEnglishNumberToPersian(market.lastPricePercent)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        tools:text="ضماد" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/eps"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layoutDirection="ltr"
                        android:text="@{StringUtil.convertEnglishNumberToPersian(market.eps)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        tools:text="3699" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/p_e"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layoutDirection="ltr"
                        android:text="@{StringUtil.convertEnglishNumberToPersian(market.p_e)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/buyNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layoutDirection="ltr"
                        android:text="@{StringUtil.convertEnglishNumberToPersian(market.buyNo)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/buyVolume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layoutDirection="ltr"
                        android:text="@{StringUtil.convertEnglishNumberToPersian(market.buyVolume)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/buyPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layoutDirection="ltr"
                        android:text="@{StringUtil.convertEnglishNumberToPersian(market.buyPrice)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/sell_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@{StringUtil.convertEnglishNumberToPersian(market.sellPrice)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/sellVolume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layoutDirection="ltr"
                        android:text="@{StringUtil.convertEnglishNumberToPersian(market.sellVolume)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/sell_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layoutDirection="ltr"
                        android:text="@{StringUtil.convertEnglishNumberToPersian(market.sellNo)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </HorizontalScrollView>
</layout>